--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,19 @@
 /* Reset */
+h1,h2,h3,h4,h5,h6,p{
+	font-family: 'Open Sans';
+}
+ul{
+	margin-bottom: 0;
+}
 p{
 	margin: 0;
+}
+html,body{
+	height: 100%;
+	min-height: 100%
+}
+.page-wrap{
+	height: 100%;
 }
 /* Header */
 header{
@@ -9,6 +22,11 @@ header{
 }
 header .list-inline li{ 
 	vertical-align: top;
+}
+header .logged-in li{
+	vertical-align: middle;
+	float: initial;
+	font-size: 16px;
 }
 header a, header li, header h4{
 	color: #fff;
@@ -49,4 +67,27 @@ header a:hover{
 .reset-wrap .btn-primary{
 	background: #555b7a;
 	border-color: #555b7a; 
+}
+
+/* Home */
+.page-wrap-home main, .page-wrap-home aside{
+	height: 100%;
+}
+.page-wrap-home aside{
+	background-color: #f5ecff;
+}
+.page-wrap-home aside a{
+	color: #000;
+}
+.page-wrap-home main{
+	position: relative;
+}
+.page-wrap-home main iframe{
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
 }
