--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -7,40 +7,16 @@
     tools:context="com.example.vladd.testingandroid.MainActivity">
 
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="368dp"
+    <TextView
+        android:id="@+id/txtCoordinates2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="430dp"
+        android:text="12"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.405" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.284" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.537" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/xText"
@@ -84,45 +60,47 @@
 
     <Button
         android:id="@+id/btnGetCoordinates"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:text="Location"
+        android:layout_width="202dp"
+        android:layout_height="49dp"
+        android:text="Refresh location"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="373dp" />
+        android:layout_marginTop="260dp" />
 
     <TextView
         android:id="@+id/txtLabel"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:text="Coordonate"
+        android:layout_width="344dp"
+        android:layout_height="18dp"
+        android:text="Coordinates"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="445dp"
-        app:layout_constraintHorizontal_bias="1.0" />
+        android:layout_marginTop="360dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        tools:layout_editor_absoluteX="40dp" />
 
     <TextView
         android:id="@+id/txtCoordinates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="478dp"
-        app:layout_constraintHorizontal_bias="0.449" />
+        android:layout_marginTop="405dp"
+        app:layout_constraintHorizontal_bias="0.45" />
 
     <Button
         android:id="@+id/btnTrackLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Track"
+        android:text="Start location update "
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="329dp" />
+        android:layout_marginTop="194dp"
+        app:layout_constraintHorizontal_bias="0.502" />
 
 
 </android.support.constraint.ConstraintLayout>
