--- a/Android/app/src/main/res/layout/activity_id_device.xml
+++ b/Android/app/src/main/res/layout/activity_id_device.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.vladd.testingandroid.IdDeviceActivity">
 
-    <Button
-        android:id="@+id/buttonID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="IdClickMe!"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="250dp"
-        app:layout_constraintHorizontal_bias="0.501" />
-
     <EditText
         android:id="@+id/editText"
         android:layout_width="368dp"
@@ -37,7 +26,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="367dp" />
+        android:layout_marginTop="278dp" />
 
     <TextView
         android:id="@+id/TextResponseView"
@@ -48,5 +37,41 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="80dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="167dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/logo22"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="-60dp"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintBottom_toBottomOf="@+id/TextResponseView"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintVertical_bias="0.354" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="287dp"
+        android:layout_height="0dp"
+        android:text="Tracking device to monitor your child. Also, possible accidents will be notified to the main server"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="371dp"
+        app:layout_constraintHorizontal_bias="0.505" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set the ID given to you when you bought this product. "
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="166dp"
+        app:layout_constraintHorizontal_bias="0.509" />
 
 </android.support.constraint.ConstraintLayout>
